Fix scrollbar overflow in better-evaluation-view
Changes to the expression result output broke the scrollbar overflow,
so output was getting clipped when "Show list elements" was on.

--- a/src/plugins/better-evaluation-view/better-evaluation-view.less
+++ b/src/plugins/better-evaluation-view/better-evaluation-view.less
@@ -1,32 +1,13 @@
 .dcg-container.dsm-better-evaluation-view {
-  // Color Swatch
-  .dcg-color-evaluation .dcg-color-evaluation {
-    vertical-align: middle;
-  }
-
-  .dcg-color-evaluation .dcg-static-mathquill-view {
-    margin-right: 5px;
-  }
-
   .dsm-color-container {
     display: flex;
-    flex-direction: row;
+    gap: 5px;
+    max-width: 100%;
     align-items: center;
   }
 
   // Scrollbar for output
-  .dcg-evaluation-container {
-    max-width: 100%;
+  .dcg-evaluation-view__wrapped-value {
     overflow-x: auto;
-    overflow-y: hidden;
-    // -3px margin is removed from .dcg-evaluation due to clipping. Move it here.
-    margin-top: -3px;
-    > .dcg-evaluation.dcg-do-blur {
-      margin-top: 0;
-      max-width: 100%;
-      .dcg-inline-math-input-view {
-        font-size: 100%;
-      }
-    }
   }
 }
